2010-03-07  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Cameron Zwarich.

        Remove unnecessary includes from header files, adding them to the handful of implementation files that need them.

        * loader/CachedCSSStyleSheet.cpp:
        * loader/CachedFont.cpp:
        * loader/CachedImage.cpp:
        * loader/CachedResource.cpp:
        * loader/CachedResource.h:
        * loader/CachedScript.cpp:
        * loader/CachedXSLStyleSheet.cpp:
        * loader/icon/IconFetcher.cpp:
        * loader/loader.cpp:
        * page/Page.cpp:
        * platform/graphics/Image.cpp:
        * platform/graphics/Image.h:
        * platform/graphics/cg/GraphicsContextPlatformPrivateCG.h:
        * platform/graphics/cg/PDFDocumentImage.cpp:
        * platform/graphics/cg/PathCG.cpp:
        * platform/graphics/mac/ImageMac.mm:

2010-03-07  Mark Rowe  <mrowe@apple.com>

        Chromium build fix.

        * platform/chromium/ChromiumDataObject.h: Include SharedBuffer.h since the inline constructor of this
        class means that the pointed-to type of the RefPtr member must be available.

2010-03-07  Mark Rowe  <mrowe@apple.com>

        Qt build fix.

        * platform/network/qt/DnsPrefetchHelper.cpp: Include PlatformString.h since we're using WebCore::String.

2010-03-07  Kent Tamura  <tkent@chromium.org>

        Reviewed by Eric Seidel.

        Fix a bug that validity.valueMissing for a radio button with required
        in a form element always returns true.
        https://bugs.webkit.org/show_bug.cgi?id=35472

        Test: fast/forms/ValidityState-valueMissing-radio.html

        * html/HTMLInputElement.cpp:
        (WebCore::checkedRadioButtons): Move the location to be used by valueMissing().
        (WebCore::HTMLInputElement::valueMissing):
          Use checkedRadioButtons() instead of document()->checkedRadioButtons().

2010-03-07  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Cameron Zwarich.
