@@ -17,17 +17,17 @@
 #include "config.h"
 #include "ClipboardGtk.h"
 
-#include "CachedImage.h"
 #include "CString.h"
+#include "CachedImage.h"
 #include "Editor.h"
 #include "Element.h"
 #include "FileList.h"
 #include "Frame.h"
-#include "markup.h"
+#include "Image.h"
 #include "NotImplemented.h"
 #include "RenderImage.h"
 #include "StringHash.h"
-
+#include "markup.h"
 #include <gtk/gtk.h>
 
 namespace WebCore {
