@@ -1,5 +1,11 @@
 2010-03-07  Mark Rowe  <mrowe@apple.com>
 
+        Gtk build fix.
+
+        * platform/gtk/ClipboardGtk.cpp: Include Imageh since we're using WebCore::Image.
+
+2010-03-07  Mark Rowe  <mrowe@apple.com>
+
         Rubber-stamped by Cameron Zwarich.
 
         Remove unnecessary includes from header files, adding them to the handful of implementation files that need them.
